--- a/bqml/01-bqml-to-caip-tutorial.ipynb
+++ b/bqml/01-bqml-to-caip-tutorial.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_ID='tsaikevin-ds'"
+    "PROJECT_ID=[] #enter your project name"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bq mk natality"
+    "!bq show natality || mk natality"
    ]
   },
   {
@@ -316,8 +316,8 @@
     "import os\n",
     "import random\n",
     "\n",
-    "REGION='us-central1'\n",
-    "MODEL_VERSION='v1'\n",
+    "REGION=[] #e.g. 'us-central1'\n",
+    "MODEL_VERSION=[] #e.g. 'v1'\n",
     "\n",
     "MODEL_BUCKET='gs://{}-{}'.format(PROJECT_ID,str(random.randrange(1000,10000)))\n",
     "MODEL_PATH=os.path.join(MODEL_BUCKET,'export/natality_model',MODEL_VERSION)"
@@ -337,6 +337,34 @@
    "outputs": [],
    "source": [
     "!gsutil mb $MODEL_BUCKET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "stream = os.popen(\"bq extract -m natality.natality_model {}\".format(MODEL_PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bq ls -m natality"
    ]
   },
   {
@@ -618,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
