--- a/bqml/02-bqml-to-caip-pipeline.ipynb
+++ b/bqml/02-bqml-to-caip-pipeline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
     "KFPHOST='14a99953b1de618d-dot-us-central2.pipelines.googleusercontent.com'\n",
     "\n",
     "#Parameters for BQML\n",
-    "DATASET='natality6'\n",
+    "DATASET='natality7'\n",
     "VIEW='input_view'\n",
     "MODEL='natality_model'\n",
     "ALGO='linear_reg'\n",
     "\n",
     "#Parameters for AI Platform Prediction\n",
     "REGION='us-central1'\n",
-    "MODEL_VERSION='v7'\n",
+    "MODEL_VERSION='v13'\n",
     "MODEL_BUCKET='gs://tsaikevin-inference/'\n",
     "MODEL_PATH=os.path.join(MODEL_BUCKET,'bqml/model/export/',MODEL,MODEL_VERSION)\n",
     "RUNTIME_VERSION='1.15'\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,24 @@
     "    print(\"Running command: {}\".format(command_string))\n",
     "    response=os.popen(command_string)\n",
     "    print(\"Command response: {}\".format(response.read()))\n",
+    "    return project_id\n",
+    "\n",
+    "gcp_command_op=comp.func_to_container_op(func=gcp_command_func, base_image=\"google/cloud-sdk:latest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcp_command_func(project_id: str, command_string: str) -> str:\n",
+    "    import subprocess\n",
+    "    config_string=\"gcloud config set project {}\".format(project_id)\n",
+    "    config=subprocess.run(config_string, shell=True, check=True, stdout=subprocess.PIPE, universal_newlines=True)\n",
+    "    print(\"Running command: {}\".format(command_string))\n",
+    "    response=subprocess.run(command_string, shell=True, check=True, stdout=subprocess.PIPE, universal_newlines=True)\n",
+    "    print(\"Command response: {}\".format(response.stdout))\n",
     "    return project_id\n",
     "\n",
     "gcp_command_op=comp.func_to_container_op(func=gcp_command_func, base_image=\"google/cloud-sdk:latest\")"
@@ -107,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"http://14a99953b1de618d-dot-us-central2.pipelines.googleusercontent.com/#/runs/details/be17c6c7-bb93-47c5-a541-88fddfd37f17\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"http://14a99953b1de618d-dot-us-central2.pipelines.googleusercontent.com/#/runs/details/bfb33af3-6a6b-4ba6-9afd-b89850d539d8\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
